clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__20000511_1.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/20000511-1.c" (c, x86_64-unknown-linux-gnu)
fn abort() -> void [external, c, nothrow];
fn f(%arg0: s32i, %arg1: s32i) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i, %arg1: s32i):
        %205 = alloca s32i, "value", align 4
        %206 = alloca s32i, "expect", align 4
        store %arg0, %205
        store %arg1, %206
        scope {
            %207 = load %205 : s32i, align 4
            %208 = load %206 : s32i, align 4
            %209 = cmp ne %207, %208 : bool
            if %209 {
                %210 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        return
}
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s32i, "a", align 4
    %2 = alloca s32i, "b", align 4
    %3 = alloca s32i, "c", align 4
    %4 = alloca s32i, "d", align 4
    %5 = alloca s32i, "e", align 4
    %6 = const 0 : s32i
    store %6, %0
    %7 = const 7 : s32i
    store %7, %1, align 4
    %8 = const 6 : s32i
    store %8, %2, align 4
    %9 = const 4 : s32i
    store %9, %3, align 4
    %10 = const 7 : s32i
    store %10, %4, align 4
    %11 = const 2 : s32i
    store %11, %5, align 4
    %12 = load %1 : s32i, align 4
    %13 = cast(int_to_bool) %12 : bool
    %14 = ternary %13 ? { : bool
        %204 = const true : bool
        yield %204
    } : {
        %200 = load %2 : s32i, align 4
        %201 = load %3 : s32i, align 4
        %202 = rem %200, %201 : s32i
        %203 = cast(int_to_bool) %202 : bool
        yield %203
    }
    %15 = cast(bool_to_int) %14 : s32i
    %16 = const 1 : s32i
    call @f(%15, %16) [all]
    %17 = load %1 : s32i, align 4
    %18 = cast(int_to_bool) %17 : bool
    %19 = ternary %18 ? { : s32i
        %197 = load %2 : s32i, align 4
        %198 = load %3 : s32i, align 4
        %199 = rem %197, %198 : s32i
        yield %199
    } : {
        %196 = const 0 : s32i
        yield %196
    }
    %20 = const 2 : s32i
    call @f(%19, %20) [all]
    %21 = load %2 : s32i, align 4
    %22 = load %3 : s32i, align 4
    %23 = rem %21, %22 : s32i
    store %23, %1, align 4
    %24 = const 2 : s32i
    call @f(%23, %24) [all]
    %25 = load %2 : s32i, align 4
    %26 = load %3 : s32i, align 4
    %27 = rem %25, %26 : s32i
    %28 = load %1 : s32i, align 4
    %29 = mul %28, %27 : s32i [nsw]
    store %29, %1, align 4
    %30 = const 4 : s32i
    call @f(%29, %30) [all]
    %31 = load %2 : s32i, align 4
    %32 = load %3 : s32i, align 4
    %33 = rem %31, %32 : s32i
    %34 = load %1 : s32i, align 4
    %35 = div %34, %33 : s32i
    store %35, %1, align 4
    %36 = const 2 : s32i
    call @f(%35, %36) [all]
    %37 = load %2 : s32i, align 4
    %38 = load %3 : s32i, align 4
    %39 = rem %37, %38 : s32i
    %40 = load %1 : s32i, align 4
    %41 = rem %40, %39 : s32i
    store %41, %1, align 4
    %42 = const 0 : s32i
    call @f(%41, %42) [all]
    %43 = load %2 : s32i, align 4
    %44 = load %3 : s32i, align 4
    %45 = rem %43, %44 : s32i
    %46 = load %1 : s32i, align 4
    %47 = add %46, %45 : s32i [nsw]
    store %47, %1, align 4
    %48 = const 2 : s32i
    call @f(%47, %48) [all]
    %49 = load %4 : s32i, align 4
    %50 = cast(int_to_bool) %49 : bool
    %51 = ternary %50 ? { : bool
        %195 = const true : bool
        yield %195
    } : {
        %189 = load %3 : s32i, align 4
        %190 = cast(int_to_bool) %189 : bool
        %191 = ternary %190 ? { : bool
            %193 = load %5 : s32i, align 4
            %194 = cast(int_to_bool) %193 : bool
            yield %194
        } : {
            %192 = const false : bool
            yield %192
        }
        yield %191
    }
    %52 = cast(bool_to_int) %51 : s32i
    %53 = const 1 : s32i
    call @f(%52, %53) [all]
    %54 = load %4 : s32i, align 4
    %55 = cast(int_to_bool) %54 : bool
    %56 = ternary %55 ? { : s32i
        %182 = load %3 : s32i, align 4
        %183 = cast(int_to_bool) %182 : bool
        %184 = ternary %183 ? { : bool
            %187 = load %5 : s32i, align 4
            %188 = cast(int_to_bool) %187 : bool
            yield %188
        } : {
            %186 = const false : bool
            yield %186
        }
        %185 = cast(bool_to_int) %184 : s32i
        yield %185
    } : {
        %181 = const 0 : s32i
        yield %181
    }
    %57 = const 1 : s32i
    call @f(%56, %57) [all]
    %58 = load %3 : s32i, align 4
    %59 = cast(int_to_bool) %58 : bool
    %60 = ternary %59 ? { : bool
        %179 = load %5 : s32i, align 4
        %180 = cast(int_to_bool) %179 : bool
        yield %180
    } : {
        %178 = const false : bool
        yield %178
    }
    %61 = cast(bool_to_int) %60 : s32i
    store %61, %4, align 4
    %62 = const 1 : s32i
    call @f(%61, %62) [all]
    %63 = load %3 : s32i, align 4
    %64 = cast(int_to_bool) %63 : bool
    %65 = ternary %64 ? { : bool
        %176 = load %5 : s32i, align 4
        %177 = cast(int_to_bool) %176 : bool
        yield %177
    } : {
        %175 = const false : bool
        yield %175
    }
    %66 = cast(bool_to_int) %65 : s32i
    %67 = load %4 : s32i, align 4
    %68 = mul %67, %66 : s32i [nsw]
    store %68, %4, align 4
    %69 = const 1 : s32i
    call @f(%68, %69) [all]
    %70 = load %3 : s32i, align 4
    %71 = cast(int_to_bool) %70 : bool
    %72 = ternary %71 ? { : bool
        %173 = load %5 : s32i, align 4
        %174 = cast(int_to_bool) %173 : bool
        yield %174
    } : {
        %172 = const false : bool
        yield %172
    }
    %73 = cast(bool_to_int) %72 : s32i
    %74 = load %4 : s32i, align 4
    %75 = rem %74, %73 : s32i
    store %75, %4, align 4
    %76 = const 0 : s32i
    call @f(%75, %76) [all]
    %77 = load %3 : s32i, align 4
    %78 = cast(int_to_bool) %77 : bool
    %79 = ternary %78 ? { : bool
        %170 = load %5 : s32i, align 4
        %171 = cast(int_to_bool) %170 : bool
        yield %171
    } : {
        %169 = const false : bool
        yield %169
    }
    %80 = cast(bool_to_int) %79 : s32i
    %81 = load %4 : s32i, align 4
    %82 = add %81, %80 : s32i [nsw]
    store %82, %4, align 4
    %83 = const 1 : s32i
    call @f(%82, %83) [all]
    %84 = load %3 : s32i, align 4
    %85 = cast(int_to_bool) %84 : bool
    %86 = ternary %85 ? { : bool
        %167 = load %5 : s32i, align 4
        %168 = cast(int_to_bool) %167 : bool
        yield %168
    } : {
        %166 = const false : bool
        yield %166
    }
    %87 = cast(bool_to_int) %86 : s32i
    %88 = load %4 : s32i, align 4
    %89 = sub %88, %87 : s32i [nsw]
    store %89, %4, align 4
    %90 = const 0 : s32i
    call @f(%89, %90) [all]
    %91 = load %4 : s32i, align 4
    %92 = cast(int_to_bool) %91 : bool
    %93 = ternary %92 ? { : bool
        %165 = const true : bool
        yield %165
    } : {
        %163 = load %3 : s32i, align 4
        %164 = cast(int_to_bool) %163 : bool
        yield %164
    }
    %94 = ternary %93 ? { : bool
        %162 = const true : bool
        yield %162
    } : {
        %160 = load %5 : s32i, align 4
        %161 = cast(int_to_bool) %160 : bool
        yield %161
    }
    %95 = cast(bool_to_int) %94 : s32i
    %96 = const 1 : s32i
    call @f(%95, %96) [all]
    %97 = load %4 : s32i, align 4
    %98 = cast(int_to_bool) %97 : bool
    %99 = ternary %98 ? { : s32i
        %153 = load %3 : s32i, align 4
        %154 = cast(int_to_bool) %153 : bool
        %155 = ternary %154 ? { : bool
            %159 = const true : bool
            yield %159
        } : {
            %157 = load %5 : s32i, align 4
            %158 = cast(int_to_bool) %157 : bool
            yield %158
        }
        %156 = cast(bool_to_int) %155 : s32i
        yield %156
    } : {
        %152 = const 0 : s32i
        yield %152
    }
    %100 = const 0 : s32i
    call @f(%99, %100) [all]
    %101 = load %3 : s32i, align 4
    %102 = cast(int_to_bool) %101 : bool
    %103 = ternary %102 ? { : bool
        %151 = const true : bool
        yield %151
    } : {
        %149 = load %5 : s32i, align 4
        %150 = cast(int_to_bool) %149 : bool
        yield %150
    }
    %104 = cast(bool_to_int) %103 : s32i
    store %104, %4, align 4
    %105 = const 1 : s32i
    call @f(%104, %105) [all]
    %106 = load %3 : s32i, align 4
    %107 = cast(int_to_bool) %106 : bool
    %108 = ternary %107 ? { : bool
        %148 = const true : bool
        yield %148
    } : {
        %146 = load %5 : s32i, align 4
        %147 = cast(int_to_bool) %146 : bool
        yield %147
    }
    %109 = cast(bool_to_int) %108 : s32i
    %110 = load %4 : s32i, align 4
    %111 = mul %110, %109 : s32i [nsw]
    store %111, %4, align 4
    %112 = const 1 : s32i
    call @f(%111, %112) [all]
    %113 = load %3 : s32i, align 4
    %114 = cast(int_to_bool) %113 : bool
    %115 = ternary %114 ? { : bool
        %145 = const true : bool
        yield %145
    } : {
        %143 = load %5 : s32i, align 4
        %144 = cast(int_to_bool) %143 : bool
        yield %144
    }
    %116 = cast(bool_to_int) %115 : s32i
    %117 = load %4 : s32i, align 4
    %118 = rem %117, %116 : s32i
    store %118, %4, align 4
    %119 = const 0 : s32i
    call @f(%118, %119) [all]
    %120 = load %3 : s32i, align 4
    %121 = cast(int_to_bool) %120 : bool
    %122 = ternary %121 ? { : bool
        %142 = const true : bool
        yield %142
    } : {
        %140 = load %5 : s32i, align 4
        %141 = cast(int_to_bool) %140 : bool
        yield %141
    }
    %123 = cast(bool_to_int) %122 : s32i
    %124 = load %4 : s32i, align 4
    %125 = add %124, %123 : s32i [nsw]
    store %125, %4, align 4
    %126 = const 1 : s32i
    call @f(%125, %126) [all]
    %127 = load %3 : s32i, align 4
    %128 = cast(int_to_bool) %127 : bool
    %129 = ternary %128 ? { : bool
        %139 = const true : bool
        yield %139
    } : {
        %137 = load %5 : s32i, align 4
        %138 = cast(int_to_bool) %137 : bool
        yield %138
    }
    %130 = cast(bool_to_int) %129 : s32i
    %131 = load %4 : s32i, align 4
    %132 = sub %131, %130 : s32i [nsw]
    store %132, %4, align 4
    %133 = const 0 : s32i
    call @f(%132, %133) [all]
    %134 = get_global @exit : ((s32i) -> void)*
    %135 = const 0 : s32i
    call @exit(%135) [all]
    %136 = load %0 : s32i
    return %136
}
