clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__20000523_1.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/20000523-1.c" (c, x86_64-unknown-linux-gnu)
fn exit(%arg0: s32i) -> void [external, c];
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca s64i, "x", align 8
        %2 = alloca s32i, "n", align 4
        %3 = const 0 : s32i
        store %3, %0
        scope {
                %27 = const 8 : u64i
                %28 = const 8 : u64i
                cmp
                if %29 {
                        %30 = get_global @exit : (s32i) -> void*
                        %31 = const 0 : s32i
                        call @exit(%31) [all]
                        yield
                }
                yield
        }
        %4 = const 9 : s32i
        store %4, %2, align 4
        %5 = load %2 : s32i, align 4
        %6 = cast(integral) %5 : s64i
        %7 = const 55 : s32i
        shift
        %9 = const 255 : s64i
        div
        store %10, %1, align 8
        scope {
                %23 = load %1 : s64i, align 8
                %24 = const 0 : s64i
                cmp
                if %25 {
                        %26 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %11 = const 9 : s64i
        %12 = const 55 : s32i
        shift
        %14 = const 255 : s64i
        div
        store %15, %1, align 8
        scope {
                %19 = load %1 : s64i, align 8
                %20 = const 0 : s64i
                cmp
                if %21 {
                        %22 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %16 = get_global @exit : (s32i) -> void*
        %17 = const 0 : s32i
        call @exit(%17) [all]
        %18 = load %0 : s32i
        return %18
}
