clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__20000603_1.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/20000603-1.c" (c, x86_64-unknown-linux-gnu)
fn f(%arg0: rec_s1*, %arg1: rec_s2*) -> double [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: rec_s1*, %arg1: rec_s2*):
        %14 = alloca rec_s1*, "a", align 8
        %15 = alloca rec_s2*, "b", align 8
        %16 = alloca double, "__retval", align 8
        store %arg0, %14
        store %arg1, %15
        %17 = const 1.000000e+00 : double
        %18 = load %14 : rec_s1*, align 8
        get_member
        store %17, %19, align 8
        %20 = load %15 : rec_s2*, align 8
        get_member
        %22 = load %21 : double, align 8
        %23 = const 1.000000e+00 : double
        fadd
        store %24, %16
        %25 = load %16 : double
        return %25
}
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca rec_u, "a", align 8
        %2 = const 0 : s32i
        store %2, %0
        %3 = const 0.000000e+00 : double
        get_member
        get_member
        store %3, %5, align 8
        scope {
                get_member
                get_member
                %10 = call @f(%8, %9) : double [all]
                %11 = const 2.000000e+00 : double
                cmp
                if %12 {
                        %13 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %6 = const 0 : s32i
        store %6, %0
        %7 = load %0 : s32i
        return %7
}
