clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__20000605_1.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/20000605-1.c" (c, x86_64-unknown-linux-gnu)
fn bar() -> void [internal, c, no_inline, dso_local, nothrow] {
        return
}
fn render_image_rgb_a(%arg0: rec__RenderInfo*) -> s32i [internal, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: rec__RenderInfo*):
        %17 = alloca rec__RenderInfo*, "info", align 8
        %18 = alloca s32i, "__retval", align 4
        %19 = alloca s32i, "y", align 4
        %20 = alloca s32i, "ye", align 4
        %21 = alloca float, "error", align 4
        %22 = alloca float, "step", align 4
        store %arg0, %17
        %23 = load %17 : rec__RenderInfo*, align 8
        get_member
        %25 = load %24 : s32i, align 4
        store %25, %19, align 4
        %26 = const 256 : s32i
        store %26, %20, align 4
        %27 = const 1.000000e+00 : double
        %28 = load %17 : rec__RenderInfo*, align 8
        get_member
        %30 = load %29 : float, align 4
        %31 = cast(floating) %30 : double
        fdiv
        %33 = cast(floating) %32 : float
        store %33, %22, align 4
        %34 = load %19 : s32i, align 4
        %35 = cast(int_to_float) %34 : float
        %36 = load %22 : float, align 4
        fmul
        store %37, %21, align 4
        %38 = load %21 : float, align 4
        %39 = cast(float_to_int) %38 : s32i
        %40 = cast(int_to_float) %39 : float
        %41 = load %22 : float, align 4
        fsub
        %43 = load %21 : float, align 4
        fsub
        store %44, %21, align 4
        scope {
                for cond {
                        %69 = load %19 : s32i, align 4
                        %70 = load %20 : s32i, align 4
                        cmp
                        condition %71
                } step {
                        %49 = load %19 : s32i, align 4
                        inc
                        store %50, %19, align 4
                        yield
                } body {
                        scope {
                                scope {
                                        %54 = load %21 : float, align 4
                                        %55 = cast(floating) %54 : double
                                        %56 = const 1.000000e+00 : double
                                        cmp
                                        if %57 {
                                                %58 = load %21 : float, align 4
                                                %59 = cast(float_to_int) %58 : s32i
                                                %60 = load %17 : rec__RenderInfo*, align 8
                                                get_member
                                                %62 = load %61 : s32i, align 4
                                                %63 = add %62, %59 : s32i [nsw]
                                                store %63, %61, align 4
                                                %64 = load %21 : float, align 4
                                                %65 = cast(float_to_int) %64 : s32i
                                                %66 = cast(int_to_float) %65 : float
                                                %67 = load %21 : float, align 4
                                                fsub
                                                store %68, %21, align 4
                                                call @bar() [all]
                                                yield
                                        }
                                        yield
                                }
                                %51 = load %22 : float, align 4
                                %52 = load %21 : float, align 4
                                fadd
                                store %53, %21, align 4
                                yield
                        }
                        yield
                }
                yield
        }
        %45 = load %17 : rec__RenderInfo*, align 8
        get_member
        %47 = load %46 : s32i, align 4
        store %47, %18
        %48 = load %18 : s32i
        return %48
}
fn abort() -> void [external, c, nothrow];
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca rec__RenderInfo, "info", align 4
        %2 = const 0 : s32i
        store %2, %0
        %3 = const 0 : s32i
        get_member
        store %3, %4, align 4
        %5 = const 0 : s32i
        get_member
        store %5, %6, align 4
        %7 = const 1.000000e+00 : double
        %8 = cast(floating) %7 : float
        get_member
        store %8, %9, align 4
        scope {
                %13 = call @render_image_rgb_a(%1) : s32i [all]
                %14 = const 256 : s32i
                cmp
                if %15 {
                        %16 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %10 = get_global @exit : (s32i) -> void*
        %11 = const 0 : s32i
        call @exit(%11) [all]
        %12 = load %0 : s32i
        return %12
}
