clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__20000622_1.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/20000622-1.c" (c, x86_64-unknown-linux-gnu)
fn abort() -> void [external, c, nothrow];
fn foo(%arg5: s64i, %arg6: s64i, %arg7: s64i) -> s64i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg5: s64i, %arg6: s64i, %arg7: s64i):
        %26 = alloca s64i, "a", align 8
        %27 = alloca s64i, "b", align 8
        %28 = alloca s64i, "c", align 8
        %29 = alloca s64i, "__retval", align 8
        store %arg5, %26
        store %arg6, %27
        store %arg7, %28
        scope {
                %32 = load %26 : s64i, align 8
                %33 = const 12 : s64i
                cmp
                %35 = ternary %34 ? { : bool
                        %45 = const true : bool
                        yield %45
                } : {
                        %42 = load %27 : s64i, align 8
                        %43 = const 1 : s64i
                        cmp
                        yield %44
                }
                %36 = ternary %35 ? { : bool
                        %41 = const true : bool
                        yield %41
                } : {
                        %38 = load %28 : s64i, align 8
                        %39 = const 11 : s64i
                        cmp
                        yield %40
                }
                if %36 {
                        %37 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %30 = const 0 : s64i
        store %30, %29
        %31 = load %29 : s64i
        return %31
}
fn bar(%arg3: s64i, %arg4: s64i) -> s64i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg3: s64i, %arg4: s64i):
        %21 = alloca s64i, "a", align 8
        %22 = alloca s64i, "b", align 8
        %23 = alloca s64i, "__retval", align 8
        store %arg3, %21
        store %arg4, %22
        %24 = load %22 : s64i, align 8
        store %24, %23
        %25 = load %23 : s64i
        return %25
}
fn baz(%arg0: s64i, %arg1: s64i, %arg2: void*) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s64i, %arg1: s64i, %arg2: void*):
        %9 = alloca s64i, "a", align 8
        %10 = alloca s64i, "b", align 8
        %11 = alloca void*, "c", align 8
        %12 = alloca s64i, "d", align 8
        store %arg0, %9
        store %arg1, %10
        store %arg2, %11
        %13 = load %11 : void*, align 8
        %14 = cast(ptr_to_int) %13 : s64i
        store %14, %12, align 8
        %15 = load %12 : s64i, align 8
        %16 = load %9 : s64i, align 8
        %17 = const 1 : s64i
        %18 = call @bar(%16, %17) : s64i [all]
        %19 = load %10 : s64i, align 8
        %20 = call @foo(%15, %18, %19) : s64i [all]
        return
}
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = const 0 : s32i
        store %1, %0
        %2 = const 10 : s64i
        %3 = const 11 : s64i
        %4 = const 12 : u64i
        %5 = cast(int_to_ptr) %4 : void*
        call @baz(%2, %3, %5) [all]
        %6 = get_global @exit : (s32i) -> void*
        %7 = const 0 : s32i
        call @exit(%7) [all]
        %8 = load %0 : s32i
        return %8
}
