clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__20000703_1.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/20000703-1.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[4] = ConstArray { ty: Array { element_type: Named("s8i"), size: 4 }, elts: Str("abc"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[18] = ConstArray { ty: Array { element_type: Named("s8i"), size: 18 }, elts: Str("01234567890123456"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]

fn memcpy(%arg0: void*, %arg1: void*, %arg2: u64i) -> void* [external, c, nothrow];
fn foo(%arg3: rec_baz*, %arg4: u32i, %arg5: u32i) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg3: rec_baz*, %arg4: u32i, %arg5: u32i):
        %69 = alloca rec_baz*, "p", align 8
        %70 = alloca u32i, "c", align 4
        %71 = alloca u32i, "d", align 4
        store %arg3, %69
        store %arg4, %70
        store %arg5, %71
        %72 = load %69 : rec_baz*, align 8
        get_member
        %74 = cast(array_to_ptrdecay) %73 : s8i*
        %75 = cast(bitcast) %74 : void*
        %76 = get_global @.str : s8i[4]*
        %77 = cast(array_to_ptrdecay) %76 : s8i*
        %78 = cast(bitcast) %77 : void*
        %79 = const 3 : u64i
        %80 = call @memcpy(%75, %78, %79) : void* [all]
        %81 = load %70 : u32i, align 4
        %82 = load %69 : rec_baz*, align 8
        get_member
        store %81, %83, align 4
        %84 = load %71 : u32i, align 4
        %85 = load %69 : rec_baz*, align 8
        get_member
        store %84, %86, align 4
        return
}
fn memset(%arg0: void*, %arg1: s32i, %arg2: u64i) -> void* [external, c, nothrow];
fn bar(%arg0: rec_baz*, %arg1: u32i, %arg2: u32i) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: rec_baz*, %arg1: u32i, %arg2: u32i):
        %32 = alloca rec_baz*, "p", align 8
        %33 = alloca u32i, "c", align 4
        %34 = alloca u32i, "d", align 4
        %35 = alloca void*, "tmp", align 8
        store %arg0, %32
        store %arg1, %33
        store %arg2, %34
        scope {
                %61 = alloca void*, "s", align 8
                %62 = load %32 : rec_baz*, align 8
                %63 = cast(bitcast) %62 : void*
                store %63, %61, align 8
                %64 = load %61 : void*, align 8
                %65 = const 0 : s32i
                %66 = const 28 : u64i
                %67 = call @memset(%64, %65, %66) : void* [all]
                %68 = load %61 : void*, align 8
                store %68, %35, align 8
                yield
        }
        %36 = load %35 : void*, align 8
        %37 = load %32 : rec_baz*, align 8
        get_member
        %39 = cast(array_to_ptrdecay) %38 : s8i*
        %40 = cast(bitcast) %39 : void*
        %41 = get_global @.str.1 : s8i[18]*
        %42 = cast(array_to_ptrdecay) %41 : s8i*
        %43 = cast(bitcast) %42 : void*
        %44 = const 17 : u64i
        %45 = call @memcpy(%40, %43, %44) : void* [all]
        %46 = load %32 : rec_baz*, align 8
        get_member
        %48 = cast(array_to_ptrdecay) %47 : s8i*
        %49 = cast(bitcast) %48 : void*
        %50 = get_global @.str : s8i[4]*
        %51 = cast(array_to_ptrdecay) %50 : s8i*
        %52 = cast(bitcast) %51 : void*
        %53 = const 3 : u64i
        %54 = call @memcpy(%49, %52, %53) : void* [all]
        %55 = load %33 : u32i, align 4
        %56 = load %32 : rec_baz*, align 8
        get_member
        store %55, %57, align 4
        %58 = load %34 : u32i, align 4
        %59 = load %32 : rec_baz*, align 8
        get_member
        store %58, %60, align 4
        return
}
fn abort() -> void [external, c, nothrow];
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca rec_baz, "p", align 4
        %2 = const 0 : s32i
        store %2, %0
        %3 = const 71 : u32i
        %4 = const 18 : u32i
        call @foo(%1, %3, %4) [all]
        scope {
                get_member
                %22 = load %21 : u32i, align 4
                %23 = const 71 : u32i
                cmp
                %25 = ternary %24 ? { : bool
                        %31 = const true : bool
                        yield %31
                } : {
                        get_member
                        %28 = load %27 : u32i, align 4
                        %29 = const 18 : u32i
                        cmp
                        yield %30
                }
                if %25 {
                        %26 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %5 = const 59 : u32i
        %6 = const 26 : u32i
        call @bar(%1, %5, %6) [all]
        scope {
                get_member
                %11 = load %10 : u32i, align 4
                %12 = const 59 : u32i
                cmp
                %14 = ternary %13 ? { : bool
                        %20 = const true : bool
                        yield %20
                } : {
                        get_member
                        %17 = load %16 : u32i, align 4
                        %18 = const 26 : u32i
                        cmp
                        yield %19
                }
                if %14 {
                        %15 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %7 = get_global @exit : (s32i) -> void*
        %8 = const 0 : s32i
        call @exit(%8) [all]
        %9 = load %0 : s32i
        return %9
}
